# advent-of-code

./: README.md  cli.py  pyproject.toml  utils.py
2022/1/: README.md  answer.py
2022/2/: README.md  answer.py
2022/3/: README.md  answer.py
2022/4/: README.md  answer.py
2022/5/: README.md  answer.py
2022/6/: README.md  answer.py
2022/7/: README.md  answer.py
2024/1/: solution.py
2024/2/: solution.py
2024/3/: solution.py
2024/4/: solution.py
2024/5/: solution.py
tests/: get_solutions.py
