[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Ben Poppy <ben.poppy78@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
