[project]
name = "advent-of-code"
version = "0.1.0"
description = "Solving Advent of Code puzzles"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "requests>=2.32.3",
    "typer>=0.15.1",
]

[tool.basedpyright]
typeCheckingMode = "off"
ignore = ["*"]
